<resources>
    <string name="app_name">Movesy</string>
    <string name="orders_in_progress">Orders in progress</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="valami_csomag">Valami Csomag</string>
    <string name="loading">Loading...</string>
    <string name="package_name">Name: %1$s</string>
    <string name="package_deadline">Deadline: %1$s</string>
    <string name="package_from">From: %1$s</string>
    <string name="package_to">To: %1$s</string>
    <string name="package_price">Price: %1$dft</string>
    <string name="package_size">Size: %1$s</string>
    <string name="package_status">Status: %1$s</string>
    <string name="package_transporter">Transporter: %1$s</string>
    <string name="small">Small</string>
    <string name="weight">Weight</string>
    <string name="medium">Medium</string>
    <string name="big">Big</string>
    <string name="size">Size</string>
    <string name="fragile">Fragile</string>
    <string name="huge">Huge</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="browse">Browse</string>
    <string name="my_orders">My Orders</string>
    <string name="new_order">New Order</string>
    <string name="profile">Profile</string>
    <string name="customer_name">Customer: %1$s</string>
    <string name="package_user">"User: %1$s"</string>
</resources>